Pascal/test/cohadar/pascal/errors/not_an_integer.pas
program test;
var a: false..true;

begin
end.